Thu Jul 15 01:26:49 1999  H.J. Lu  <hjl@gnu.org>

	* decl.c (duplicate_decls): Relax restriction for exception
	checks on duplicate symbols.

1999-07-07  Jason Merrill  <jason@yorick.cygnus.com>

	* decl.c (grokdeclarator): Update the names of all variants when
	de-anonymizing.

Wed Jul  7 01:26:47 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* decl2.c (mark_vtable_entries): Fix check for rtti offset.

1999-06-26  Richard Henderson  <rth@cygnus.com>

	* decl.c (cp_finish_decl): Fix typo in cp_warning_at call.

1999-06-21  Mark Mitchell  <mark@codesourcery.com>

	* init.c (expand_aggr_vbase_init): Rename to
	construct_virtual_bases.  Conditionalize construction here, 
	rather than ...
	(emit_base_init): Here.

1999-06-19  Mark Mitchell  <mark@codesourcery.com>

        * semantics.c (finish_asm_statement): Apply decay conversions to
        input operands.

	* decl.c (expand_static_init): When building an anonymous function
	for use with atexit, compute its body before and after entering
	the function.

1999-06-18  Mark Mitchell  <mark@codesourcery.com>

	* init.c (expand_aggr_vbase_init): Add flag parameter.
	(build_partial_cleanup_for): Remove, inlining into ..
	(expand_cleanup_for_base): ... here.  Take flag parameter.
	(emit_base_init): Pass the in_chrg parameter to
	emit_aggr_vbase_init. 
	(emit_aggr_vbase_init): Pass it to expand_cleanup_for_base.
	
1999-06-16  Mark Mitchell  <mark@codesourcery.com>

	* decl2.c (import_export_decl): Use same_type_p, rather than
	relying on pointer-equality for types.

	* method.c (do_build_copy_constructor): Simplify.

	* call.c (build_method_call): Remove bogus code for two-argument
	delete.
	* init.c (build_new_1): Expand on comment, and remove dead code.

	* init.c (expand_cleanup_for_base): New function, split out
	from ...
	(emit_base_init): Here.
	(expand_aggr_vbase_init): Use it.

1999-06-15  Mark Mitchell  <mark@codesourcery.com>

	* cp-tree.h (class_cache_firstobj): Declare.